reference/5.0/Microsoft.PowerShell.Core/ToC.md
#  [Microsoft.PowerShell.Core](Microsoft.PowerShell.Core.md)
##  [About]()
###  [about_Aliases](about/about_aliases.md)
###  [about_Arithmetic_Operators](about/about_arithmetic_operators.md)
###  [about_Arrays](about/about_arrays.md)
###  [about_Assignment_Operators](about/about_assignment_operators.md)
###  [about_Automatic_Variables](about/about_automatic_variables.md)
###  [about_Break](about/about_break.md)
###  [about_classes](about/about_classes.md)
###  [about_Classes_and_DSC](../psdesiredstateconfiguration/about/about_classes_and_dsc.md)
###  [about_Command_Precedence](about/about_command_precedence.md)
###  [about_Command_Syntax](about/about_command_syntax.md)
###  [about_Comment_Based_Help](about/about_comment_based_help.md)
###  [about_CommonParameters](about/about_commonparameters.md)
###  [about_Comparison_Operators](about/about_comparison_operators.md)
###  [about_Continue](about/about_continue.md)
###  [about_Core_Commands](about/about_core_commands.md)
###  [about_Data_Sections](about/about_data_sections.md)
###  [about_Debuggers](about/about_debuggers.md)
###  [about_desiredstateconfiguration](about/about_desiredstateconfiguration.md)
###  [about_Do](about/about_do.md)
###  [about_dsclogresource](about/about_dsclogresource.md)
###  [about_Enum](about/about_enum.md)
###  [about_Environment_Variables](about/about_environment_variables.md)
###  [about_Escape_Characters](about/about_escape_characters.md)
###  [about_Eventlogs](about/about_eventlogs.md)
###  [about_Execution_Policies](about/about_execution_policies.md)
###  [about_For](about/about_for.md)
###  [about_Foreach](about/about_foreach.md)
###  [about_Format.ps1xml](about/about_format.ps1xml.md)
###  [about_Functions](about/about_functions.md)
###  [about_Functions_Advanced](about/about_functions_advanced.md)
###  [about_Functions_Advanced_Methods](about/about_functions_advanced_methods.md)
###  [about_Functions_Advanced_Parameters](about/about_functions_advanced_parameters.md)
###  [about_Functions_CmdletBindingAttribute](about/about_functions_cmdletbindingattribute.md)
###  [about_Functions_OutputTypeAttribute](about/about_functions_outputtypeattribute.md)
###  [about_Group_Policy_Settings](about/about_group_policy_settings.md)
###  [about_Hash_Tables](about/about_hash_tables.md)
###  [about_hidden](about/about_hidden.md)
###  [about_History](about/about_history.md)
###  [about_If](about/about_if.md)
###  [about_Job_Details](about/about_job_details.md)
###  [about_Jobs](about/about_jobs.md)
###  [about_Join](about/about_join.md)
###  [about_Language_Keywords](about/about_language_keywords.md)
###  [about_Language_Modes](about/about_language_modes.md)
###  [about_Line_Editing](about/about_line_editing.md)
###  [about_locations](about/about_locations.md)
###  [about_logical_operators](about/about_logical_operators.md)
###  [about_Methods](about/about_methods.md)
###  [about_Modules](about/about_modules.md)
###  [about_Object_Creation](about/about_object_creation.md)
###  [about_Objects](about/about_objects.md)
###  [about_Operator_Precedence](about/about_operator_precedence.md)
###  [about_Operators](about/about_operators.md)
###  [about_packagemanagement](about/about_packagemanagement.md)
###  [about_Parameters](about/about_parameters.md)
###  [about_Parameters_Default_Values](about/about_parameters_default_values.md)
###  [about_Parsing](about/about_parsing.md)
###  [about_Path_Syntax](about/about_path_syntax.md)
###  [about_pipelines](about/about_pipelines.md)
###  [about_PowerShell_exe](about/about_powershell_exe.md)
###  [about_PowerShell_Ise_exe](about/about_powershell_ise_exe.md)
###  [about_Preference_Variables](about/about_preference_variables.md)
###  [about_profiles](about/about_profiles.md)
###  [about_Prompts](about/about_prompts.md)
###  [about_Properties](about/about_properties.md)
###  [about_Providers](about/about_providers.md)
###  [about_psconsolehostreadline](about/about_psconsolehostreadline.md)
###  [about_psreadline](about/about_psreadline.md)
###  [about_PSSession_Details](about/about_pssession_details.md)
###  [about_PSSessions](about/about_pssessions.md)
###  [about_PSSnapins](about/about_pssnapins.md)
###  [about_Quoting_Rules](about/about_quoting_rules.md)
###  [about_Redirection](about/about_redirection.md)
###  [about_Ref](about/about_ref.md)
###  [about_Regular_Expressions](about/about_regular_expressions.md)
###  [about_Remote](about/about_remote.md)
###  [about_Remote_Disconnected_Sessions](about/about_remote_disconnected_sessions.md)
###  [about_Remote_FAQ](about/about_remote_faq.md)
###  [about_Remote_Jobs](about/about_remote_jobs.md)
###  [about_Remote_Output](about/about_remote_output.md)
###  [about_Remote_Requirements](about/about_remote_requirements.md)
###  [about_Remote_Troubleshooting](about/about_remote_troubleshooting.md)
###  [about_Remote_Variables](about/about_remote_variables.md)
###  [about_Requires](about/about_requires.md)
###  [about_Reserved_Words](about/about_reserved_words.md)
###  [about_Return](about/about_return.md)
###  [about_Run_With_PowerShell](about/about_run_with_powershell.md)
###  [about_scopes](about/about_scopes.md)
###  [about_Script_Blocks](about/about_script_blocks.md)
###  [about_Script_Internationalization](about/about_script_internationalization.md)
###  [about_Scripts](about/about_scripts.md)
###  [about_Session_Configuration_Files](about/about_session_configuration_files.md)
###  [about_Session_Configurations](about/about_session_configurations.md)
###  [about_Signing](about/about_signing.md)
###  [about_simplified_syntax](about/about_simplified_syntax.md)
###  [about_Special_Characters](about/about_special_characters.md)
###  [about_Splatting](about/about_splatting.md)
###  [about_Split](about/about_split.md)
###  [about_Switch](about/about_switch.md)
###  [about_Throw](about/about_throw.md)
###  [about_Transactions](about/about_transactions.md)
###  [about_Trap](about/about_trap.md)
###  [about_Try_Catch_Finally](about/about_try_catch_finally.md)
###  [about_type_accelerators](about/about_type_accelerators.md)
###  [about_Type_Operators](about/about_type_operators.md)
###  [about_Types.ps1xml](about/about_types.ps1xml.md)
###  [about_Updatable_Help](about/about_updatable_help.md)
###  [About_Using](about/about_using.md)
###  [about_Variables](about/about_variables.md)
###  [about_While](about/about_while.md)
###  [about_Wildcards](about/about_wildcards.md)
###  [about_windows_powershell_5.0](about/about_windows_powershell_5.0.md)
###  [about_Windows_PowerShell_ISE](about/about_windows_powershell_ise.md)
###  [about_Windows_RT](about/about_windows_rt.md)
###  [about_WMI](about/about_wmi.md)
###  [about_WMI_Cmdlets](about/about_wmi_cmdlets.md)
###  [about_WQL](about/about_wql.md)
##  [Add-History](add-history.md)
##  [Add-PSSnapin](add-pssnapin.md)
##  [Clear-History](clear-history.md)
##  [Connect-PSSession](connect-pssession.md)
##  [Debug-Job](debug-job.md)
##  [Disable-PSRemoting](disable-psremoting.md)
##  [Disable-PSSessionConfiguration](disable-pssessionconfiguration.md)
##  [Disconnect-PSSession](disconnect-pssession.md)
##  [Enable-PSRemoting](enable-psremoting.md)
##  [Enable-PSSessionConfiguration](enable-pssessionconfiguration.md)
##  [Enter-PSHostProcess](enter-pshostprocess.md)
##  [Enter-PSSession](enter-pssession.md)
##  [Exit-PSHostProcess](exit-pshostprocess.md)
##  [Exit-PSSession](exit-pssession.md)
##  [Export-Console](export-console.md)
##  [Export-ModuleMember](export-modulemember.md)
##  [ForEach-Object](foreach-object.md)
##  [Functions]()
###  [Clear-Host](functions/clear-host.md)
###  [Get-Verb](functions/get-verb.md)
##  [Get-Command](get-command.md)
##  [Get-Help](get-help.md)
##  [Get-History](get-history.md)
##  [Get-Job](get-job.md)
##  [Get-Module](get-module.md)
##  [Get-PSHostProcessInfo](get-pshostprocessinfo.md)
##  [Get-PSSession](get-pssession.md)
##  [get-pssessioncapability](get-pssessioncapability.md)
##  [Get-PSSessionConfiguration](get-pssessionconfiguration.md)
##  [Get-PSSnapin](get-pssnapin.md)
##  [Import-Module](import-module.md)
##  [Invoke-Command](invoke-command.md)
##  [Invoke-History](invoke-history.md)
##  [Microsoft.PowerShell.Core](microsoft.powershell.core.md)
##  [New-Module](new-module.md)
##  [New-ModuleManifest](new-modulemanifest.md)
##  [new-psrolecapabilityfile](new-psrolecapabilityfile.md)
##  [New-PSSession](new-pssession.md)
##  [New-PSSessionConfigurationFile](new-pssessionconfigurationfile.md)
##  [New-PSSessionOption](new-pssessionoption.md)
##  [New-PSTransportOption](new-pstransportoption.md)
##  [Out-Default](out-default.md)
##  [Out-Host](out-host.md)
##  [Out-Null](out-null.md)
##  [Providers]()
###  [Alias-Provider](providers/alias-provider.md)
###  [Environment-Provider](providers/environment-provider.md)
###  [FileSystem-Provider](providers/filesystem-provider.md)
####  [Add-Content-for-FileSystem](providers/filesystem-provider/add-content-for-filesystem.md)
####  [Clear-Content-for-FileSystem](providers/filesystem-provider/clear-content-for-filesystem.md)
####  [Get-ChildItem-for-FileSystem](providers/filesystem-provider/get-childitem-for-filesystem.md)
####  [Get-Content-for-FileSystem](providers/filesystem-provider/get-content-for-filesystem.md)
####  [Get-Item-for-FileSystem](providers/filesystem-provider/get-item-for-filesystem.md)
####  [Remove-Item-for-FileSystem](providers/filesystem-provider/remove-item-for-filesystem.md)
####  [Set-Content-for-FileSystem](providers/filesystem-provider/set-content-for-filesystem.md)
####  [Test-Path-for-FileSystem](providers/filesystem-provider/test-path-for-filesystem.md)
###  [Function-Provider](providers/function-provider.md)
###  [Registry-Provider](providers/registry-provider.md)
###  [Variable-Provider](providers/variable-provider.md)
##  [Receive-Job](receive-job.md)
##  [Receive-PSSession](receive-pssession.md)
##  [Register-ArgumentCompleter](register-argumentcompleter.md)
##  [Register-PSSessionConfiguration](register-pssessionconfiguration.md)
##  [Remove-Job](remove-job.md)
##  [Remove-Module](remove-module.md)
##  [Remove-PSSession](remove-pssession.md)
##  [Remove-PSSnapin](remove-pssnapin.md)
##  [Resume-Job](resume-job.md)
##  [Save-Help](save-help.md)
##  [Set-PSDebug](set-psdebug.md)
##  [Set-PSSessionConfiguration](set-pssessionconfiguration.md)
##  [Set-StrictMode](set-strictmode.md)
##  [Start-Job](start-job.md)
##  [Stop-Job](stop-job.md)
##  [Suspend-Job](suspend-job.md)
##  [Test-ModuleManifest](test-modulemanifest.md)
##  [Test-PSSessionConfigurationFile](test-pssessionconfigurationfile.md)
##  [Unregister-PSSessionConfiguration](unregister-pssessionconfiguration.md)
##  [Update-Help](update-help.md)
##  [Wait-Job](wait-job.md)
##  [Where-Object](where-object.md)
